functionality done with javaScript

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     transition: all .2s;
+    transition: all .2s ease-in-out;
 }
 
 .seat.selected {
